<resources>
    <string name="btn_label">Button</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="rmb_hint_label">Input RMB</string>
    <string name="app_name">Result</string>
    <string name="btn_opencfg">Config</string>
    <string name="btn_save_label">Save</string>
</resources>
